@@ -16,6 +16,7 @@
 - Fixed OpenBSD compatibility issues
 - Correct handling of "dormant" and "not present" interface operational states
 - Syslog messages received on loopback bound to receiving node (local management node or syslog proxy node)
+- Fixed mail sender address encoding
 - NXSL:
 	- New class "InetAddress"
 	- New attribute "ipAddressList" for class "Interface"
